# agentspm

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
agent_spm/: __init__.py
agent_spm/adapters/: claude_code.py
agent_spm/cli/: alerts.py  events.py  inventory.py  main.py  posture.py  report.py  scan.py  sessions.py
agent_spm/domain/: interfaces.py  models.py
agent_spm/engine/: evaluator.py  inventory.py  posture.py  report.py  scanner.py
agent_spm/policies/: defaults.py  loader.py  writer.py
agent_spm/security/: __init__.py  redaction.py
agent_spm/storage/: sqlite_repo.py
scripts/: check.sh
tests/: test_alerts_management.py  test_evaluator.py  test_events_cli.py  test_inventory.py  test_out_of_directory.py  test_parser.py  test_policy.py  test_policy_writer.py  test_posture.py  test_posture_cli.py  test_redaction.py  test_report.py  test_sessions_cli.py  test_storage.py
tests/fixtures/: elevated_session.jsonl  sample_session.jsonl
